--- a/1411.css
+++ b/1411.css
@@ -14,8 +14,8 @@ body{
 .left-img need-height{
     position: relative;
     z-index: 1;
-    width:100%;
-    height: 100%;
+    width:auto;
+    height: auto;
 }
 .container {
     width: 430px;
