--- a/1411.css
+++ b/1411.css
@@ -11,11 +11,31 @@ body{
     justify-content: center;
     align-items: center;
 }
-.left-img need-height{
+.left-img need-height {
+
     position: relative;
     z-index: 1;
-    width:auto;
-    height: auto;
+    /*width:auto;*/
+    /*height: auto;*/
+}
+
+.img-show  {
+/*animation: moveBalloon 6s linear .5s infinite normal;*/
+    animation: zoomin 6s ease-in-out infinite alternate;
+    -webkit-animation: zoomin 6s ease-in-out infinite alternate;
+}
+@keyframes zoomin {
+    0% {-webkit-transform: scale(1);}
+    100% {-webkit-transform: scale(1.2);}
+}
+.img-hidden{
+    /*animation: moveBalloon 6s linear .5s infinite normal;*/
+    animation: zoomin 6s ease-in-out infinite alternate;
+    -webkit-animation: zoomin 6s ease-in-out infinite alternate;
+}
+@keyframes zoomin {
+    0% {-webkit-transform: scale(1);}
+    100% {-webkit-transform: scale(1.2);}
 }
 .container {
     width: 430px;
